src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

h1, h2, h3, h4, h5, h6 {
  font-family: "neue-haas-grotesk-display", sans-serif;
  font-weight: 900;
  font-style: italic;
  @apply mb-4
}

h1 {
  @apply sm:text-5xl text-3xl;
}

h2 {
  @apply sm:text-4xl text-2xl;
}

h3 {
  @apply sm:text-3xl text-xl;
}

h4 {
  @apply sm:text-2xl text-base;
}

.text-content p{
  @apply mb-4 leading-relaxed;
}

.text-content a {
  @apply underline cursor-pointer text-blue-700;
}

.text-content ul{
  @apply list-disc pl-4;
}

.dark-mode {
  @apply bg-neutral-900 text-white;
}

